# autocereal

./: CMakeLists.txt  License.txt  Readme.md
include/fr/autocereal/: autocereal.h  fr.autocereal.cppm
test/: AcCore.cpp  AcSerialize.cpp  CMakeLists.txt  ToFromFunctions.cpp
